Fix warnings in some `integration_tests` module
This PR addresses warnings in the following modules:
- `:integration_tests:versioning`
- `:integration_tests:testparameterinjector`
- `:integration_tests:sparsearray`
- `:integration_tests:security-providers`
- `:integration_tests:sdkcompat`
- `:integration_tests:room`
- `:integration_tests:roborazzi`
- `:integration_tests:powermock`